--- a/css/styles.css
+++ b/css/styles.css
@@ -115,16 +115,6 @@ body {
   left: 0;
   bottom: -1px;
 }
- {
-  content: "";
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-}
 
 .page-header {
   border-bottom: 1px solid #ececec;
@@ -185,8 +175,8 @@ body {
   text-decoration: none;
   padding-top: 32px;
   padding-bottom: 32px;
-  display: block;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav-link.current {
@@ -223,7 +213,11 @@ body {
   text-decoration: none;
   padding-top: 32px;
   padding-bottom: 32px;
+
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .auth-nav-link:hover .auth-nav-icons,
 .auth-nav-link:focus .auth-nav-icons {
   fill: var(--accent-color);
@@ -300,6 +294,7 @@ body {
 .button {
   border-radius: 4px;
   cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.primary {
@@ -359,6 +354,20 @@ body {
 }
 /*--------------------work and team----------*/
 
+.subtitle {
+  color: var(--white-text-color);
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  padding: 27px 0;
+}
+
 .work-section {
   padding-top: 0;
 }
@@ -369,6 +378,7 @@ body {
 }
 
 .work-list-item {
+  position: relative;
   width: calc((100% - 2 * 30px) / 3);
 }
 
@@ -422,6 +432,7 @@ body {
   height: 44px;
   background-color: var(--white-bg-color);
   border-radius: 50%;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -464,6 +475,7 @@ body {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   padding: 16px 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link {
@@ -514,6 +526,7 @@ body {
   text-decoration: none;
   font-size: 14px;
   line-height: 1.71;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address {
@@ -544,6 +557,7 @@ body {
   height: 44px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
@@ -640,6 +654,7 @@ body {
 
 .portfolio {
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio:hover,
@@ -647,4 +662,32 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-/* ------------------icons------------------- */
+
+.portfolio:hover .overlay,
+.portfolio:focus .overlay {
+  transform: translateY(0);
+}
+/* -----------------overlay-------------- */
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-text {
+  color: var(--white-text-color);
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.6;
+}
