--- a/css/styles.css
+++ b/css/styles.css
@@ -218,11 +218,6 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.auth-nav-link:hover .auth-nav-icons,
-.auth-nav-link:focus .auth-nav-icons {
-  fill: var(--accent-color);
-}
-
 .auth-nav-link:hover,
 .auth-nav-link:focus {
   color: var(--accent-color);
@@ -230,6 +225,7 @@ body {
 
 .auth-nav-icons {
   margin-right: 10px;
+  fill: currentColor;
 }
 /* -----------------------section---------------------- */
 
@@ -350,8 +346,6 @@ body {
   margin-bottom: 30px;
 }
 
-.feature-icon {
-}
 /*--------------------work and team----------*/
 
 .subtitle {
@@ -432,22 +426,19 @@ body {
   height: 44px;
   background-color: var(--white-bg-color);
   border-radius: 50%;
+  color: #afb1b8;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent-color);
+  color: var(--white-text-color);
   outline: transparent;
 }
 
 .social-icon {
-  fill: #afb1b8;
-}
-
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
-  fill: var(--white-text-color);
+  fill: currentColor;
 }
 
 .social-list {
@@ -472,24 +463,19 @@ body {
   justify-content: center;
   width: 170px;
   height: 92px;
-  border: 1px solid #afb1b8;
+  border: 1px solid currentColor;
   border-radius: 4px;
-  padding: 16px 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #afb1b8;
 }
 
 .clients-link {
-  fill: #afb1b8;
-}
-
-.clients-link:hover,
-.clients-link:focus {
-  fill: var(--accent-color);
+  fill: currentColor;
 }
 
 .clients-item:hover,
 .clients-item:focus {
-  border-color: var(--accent-color);
+  color: var(--accent-color);
 }
 /*-------------------- footer-------------- */
 
@@ -544,9 +530,7 @@ body {
   color: #ffffff;
 }
 .footer-list {
-  display: inline-block;
-  width: 206px;
-  height: 80px;
+  margin-left: 70px;
 }
 
 .footer-social-link {
@@ -581,9 +565,6 @@ body {
   align-items: baseline;
 }
 
-.address {
-  margin-right: 70px;
-}
 /*--------------------- СТИЛІ ДЛЯ ПОРТФОЛІО------------------ */
 
 /*----------------- filters------------------- */
@@ -597,12 +578,13 @@ body {
 }
 
 .button.secondary {
-  min-width: 73px;
   font-weight: 500;
+  line-height: 1.63;
   padding: 6px 22px;
   color: var(--title-text-color);
   background-color: var(--secondery-bg-color);
   border: 1px solid transparent;
+  letter-spacing: 0.03em;
 }
 
 .button.secondary:hover,
@@ -690,4 +672,34 @@ body {
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.6;
+}
+
+/* ----------------------backdrop------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  background-color: var(--white-bg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
