--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@ body {
   line-height: 1.19;
   text-decoration: none;
   display: block;
+  outline: transparent;
 }
 
 .logo-header {
@@ -186,6 +187,7 @@ body {
 .site-nav-link:hover,
 .site-nav-link:focus {
   color: var(--accent-color);
+  outline: transparent;
 }
 
 /*----------------- auth-nav----------------- */
@@ -221,6 +223,7 @@ body {
 .auth-nav-link:hover,
 .auth-nav-link:focus {
   color: var(--accent-color);
+  outline: transparent;
 }
 
 .auth-nav-icons {
@@ -464,12 +467,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-basis: calc((100% - 5 * 30px) / 6);
   padding: 16px 32px;
   border: 1px solid currentColor;
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #afb1b8;
+}
+
+.clients-list {
+  flex-basis: calc((100% - 5 * 30px) / 6);
 }
 
 .clients-link {
